# Knoten

./: .gitignore  AGENTS.md  DimensionsHeatmap.py  DimensionsHeatmap2Opt.py  DimensionsHeatmap3Opt.py  DimensionsHeatmap4OptGPU.py  DimensionsHeatmapOpt.py  EmergenzGravitation.py  Knoten.py  Knoten3D.py  Knoten3D_prism.py  OU-Limit.py  Oszillationen.py  PaperII3D_4Plots.py  PaperII3D_4Plots2.py  PaperII3D_5Plots1.py  PaperII3D_5Plots2.py  README.md  alpha_d_vs_n_test2.json  alpha_d_vs_n_test3.json  alpha_d_vs_n_test_numba.json  diagram5_seed.npy  emergenz_2regime.py  fig_Gamma_alpha.py  fig_Hlamda_alpha.py  fig_alpha_hbareff.py  final_D3_alpha0009_seed1-10.json  heatmap_data.npy  highN_regime_ensemble_alpha0.006_seed1-5_200.json  highN_regime_ensemble_alpha0.007_seed1-5_200.json  highN_regime_ensemble_epsilon0.02_seed1-5_200.json  highN_regime_ensemble_eta0.25_seed1-5_200.json  highN_regime_ensemble_seed1-3_200.json  highN_regime_ensemble_seed1-5_200.json  highN_regime_seed1.json  highN_regime_seed2.json  highN_regime_validation_100k.json  highN_regime_validation_100k_200.json  highN_regime_validation_100k_200_details.json  knot_chi_scan.py  (+25 more)
2SkalenKernel/: 2Trajektorien_dDimRho.py  2Trajektorien_dDimRho_FFT.py  2Trajektorien_dDimRho_FFT_sigmaR.py  3Plots2Traj.py  DrehimpulsParameterraum.py  KnotenSim2Trajektorien.py  ParameterraumApp.py  ParameterraumHeatmap.py  ParameterraumHeatmapDrehimpulsRandbedingungen.py  SpecCovFrac.py  Ueff.py  checkpoint_emergent3d.npz  emergent_3D_final.py  emergent_3d_scan.py  load_npy.py  rho.py  stab_partial.npy
Fraktale/: FD2.py  (+6 more)
(+548 files in other folders)
