[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emergenz-knoten"
version = "0.1.0"
description = "Emergenz Knoten minimal world model with finite memory trajectory simulations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Hauke" }
]
dependencies = [
  "numpy>=1.25",
  "matplotlib",
  "numba",
  "scipy",
  "pandas",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["emergenz_knoten*"]

[tool.ruff.lint.per-file-ignores]
"experiments/current/**/*.py" = ["E402"]
"tests/**/*.py" = ["E402"]
